[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://Img/sound_button.png" type="Texture" id=3]
[ext_resource path="res://Img/mainmenu_button.png" type="Texture" id=4]
[ext_resource path="res://Img/sound_mute_button.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.713726 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.835294, 0.823529, 0.054902, 0.784314 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 0.509804 )
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroound" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 270.0
margin_bottom = -270.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 305.0
custom_constants/separation = 40
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 560.0
margin_bottom = 128.0
custom_constants/separation = 50
alignment = 1

[node name="MuteButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 255.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="MainMenuButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 305.0
margin_right = 433.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 10.0
margin_top = 168.0
margin_right = 549.0
margin_bottom = 285.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.835294, 0.823529, 0.054902, 0.784314 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "CONTINUE"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
